<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_trading"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_title_trading" />
    <item
        android:id="@+id/nav_forecast"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_title_forecast" />
    <item
        android:id="@+id/nav_news"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_title_news" />
    <item
        android:id="@+id/nav_watchlist"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_title_watchlist" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_title_profile" />
</menu>

